<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:fillViewport="false">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".fragments.ComposeFragment"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitleNewPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="@string/new_post"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/enter_a_description"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:padding="10dp" />

        <Button
            android:id="@+id/btnTakePicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#D500F9"
            android:padding="10dp"
            android:text="@string/take_picture"
            android:textColor="#FFFFFF"
            tools:layout_editor_absoluteX="166dp" />

        <ImageView
            android:id="@+id/ivPostPicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/image"
            android:padding="10dp"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/btnPostPicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#D500F9"
            android:text="@string/post"
            android:textColor="#FFFFFF"/>

    </LinearLayout>
</ScrollView>